# PIANO

./: .gitignore  ANALYSIS.md  PLAN.md  PROGRESS.md  README.md  RESTART_PROMPT.md  SPEC.md  SUGGESTION.md  environment.yml  pyproject.toml  restart_prompt.md
analyses/: 2026-04-19_hoi_dataset_verification.md  2026-04-19_humanml3d_encoder_switch.md  2026-04-19_inference_smoke_test.md  2026-04-19_interact_preprocessing_complete.md  2026-04-19_momask_weight_loading.md  2026-04-19_omomo_data_inspection.md  2026-04-19_omomo_preprocessing.md  2026-04-19_switch_to_interact_only.md  2026-04-20_codex_review_p0_fixes.md  2026-04-20_pseudo_label_stats_v1_diagnosis.md  2026-04-21_pseudo_label_phase_support_fixes.md  2026-04-21_text_annotation_probe_dead_end.md  2026-04-22_hand_threshold_bump.md  2026-04-22_v5_auto_detect_regression.md  2026-05-01_per_step_guidance_design.md  2026-05-01_v17_diagnostics_and_gumbel.md  2026-05-01_v17_per_step_result.md  2026-05-01_v17_re_diagnosis.md  2026-05-01_v17f_gumbel_result_and_p1_plan.md  2026-05-01_v17g_gamma_int_boost_result.md  2026-05-02_alternatives_to_scheduled_sampling.md  2026-05-02_class_imbalance_sota_survey.md  2026-05-02_codec_floor_baselines.md  2026-05-02_hoi_affordance_sota_survey_post_move_as_you_say.md  2026-05-02_hoi_data_aug_synthetic_transfer_survey.md  2026-05-02_mtl_dag_research_survey.md  2026-05-02_predictor_v9_architecture_research.md  2026-05-02_v17h_results.md  2026-05-03_gamma_int_re_evaluation.md  2026-05-03_pseudo_label_v12_strict_design.md  2026-05-03_unified_metric_results.md  2026-05-03_v92_asl_motion_aware_design.md  2026-05-03_v9_combined_design.md  2026-05-03_v9_results_and_v91_plan.md  2026-05-04_predictor_v7_target_diagnosis.md  2026-05-05_predictor_v8_design.md  2026-05-05_v7fix_results_and_v6_baseline_correction.md  2026-05-05_v81_results_and_v811_plan.md  2026-05-05_v8_round1_diagnosis_and_v81_plan.md  2026-06-01_round40_return_for_codex.md  (+19 more)
configs/: accelerate_config.yaml  accelerate_local_single_gpu.yaml
configs/model/: interaction_predictor.yaml  motion_generator.yaml  object_encoder.yaml
configs/training/: anchordiff_a2_full_data.yaml  anchordiff_a3_full_data.yaml  anchordiff_r28_a0_input_add_48clip.yaml  anchordiff_r28_a1_gated_input_48clip.yaml  anchordiff_r28_a1b_gated_input_open_48clip.yaml  anchordiff_r28_a2_per_layer_adapter_48clip.yaml  anchordiff_r28_a2b_adapter_only_48clip.yaml  anchordiff_r28_a3_best_long_48clip.yaml  anchordiff_r28_b0_baseline_48clip.yaml  anchordiff_r28_b1_interaction_only_48clip.yaml  anchordiff_r28_b2_body_only_all_on_48clip.yaml  anchordiff_r28_b3_body_only_energy_48clip.yaml  anchordiff_r28_b4_interaction_plus_body_48clip.yaml  anchordiff_r28_c1_hints_plus_gait_48clip.yaml  anchordiff_r28_c2_hints_plus_hint_consistency_48clip.yaml  anchordiff_r28_c3_hints_gait_consistency_48clip.yaml  anchordiff_r29_a0_input_add.yaml  anchordiff_r29_a1_gated_input_open.yaml  anchordiff_r29_a2_adapter_only.yaml  anchordiff_r29_a3_input_add_adapter.yaml  anchordiff_r29_a4_typed.yaml  anchordiff_r29_b0_c23_only.yaml  anchordiff_r29_b1_c38_current_only.yaml  anchordiff_r29_b2_c41_current_only.yaml  anchordiff_r29_b3_c38_root0_only.yaml  anchordiff_r29_b4_c41_root0_only.yaml  anchordiff_r29_b5_bestC_full_ISB.yaml  anchordiff_r29_b6_secondBestC_full_ISB.yaml  anchordiff_r29_c0_i0_none.yaml  anchordiff_r29_c1_i1_contact.yaml  anchordiff_r29_c2_i2_offset_masked.yaml  anchordiff_r29_c3_i3_contact_offset_masked.yaml  anchordiff_r29_c4_i4_contact_offset_unmasked.yaml  anchordiff_r29_d0_s0_none.yaml  anchordiff_r29_d1_s1_stance_height_walking.yaml  anchordiff_r29_d2_s2_s1_phase.yaml  anchordiff_r29_d3_s3_s1_footstep_target.yaml  anchordiff_r29_d4_s4_s1_phase_footstep.yaml  anchordiff_r29_d5_bestI_bestS.yaml  anchordiff_r29_e0_b0_none.yaml  (+131 more)
data/subsets/: stageB_S1_N100.json  stageB_S2_N100.json  (+8 more)
scripts/: README.md  round20_quick_aggregate.py
tests/: _smoke_pb1_train_step.py  test_body_action_hint.py  test_contact_eval.py  test_contact_guidance.py  test_contact_guidance_per_step.py  test_contact_guidance_residual_routing.py  test_dataset_mirror_duplicate.py  test_decoded_contact_loss.py  test_dit_obj_xattn.py  test_eval_sampling.py  test_humanml3d_mirror.py  test_interaction_hint.py  test_interaction_plan_compiler.py  test_interaction_predictor.py  test_motion_generator.py  test_motion_generator_intercontrol.py  test_motion_generator_residual.py  test_oracle_hint_injection.py  test_pb1_loss_helpers.py  test_pseudo_labels.py  test_r41_calibration.py  test_round28_injection.py  test_round29_cond_usage_probe.py  test_round29_failure_targeted_ablation_manifest.py  test_round29_failure_targeted_summarizer.py  test_round29_g1_soft_stance_diag.py  test_round29_loss_strategy_ablation_manifest.py  test_round29_loss_strategy_full_data_manifest.py  test_round29_loss_strategy_full_data_summarizer.py  test_round29_loss_strategy_smoke.py  test_round29_motion_repr_roundtrip_diag.py  test_round29_next_ablation_manifest.py  test_round29_next_ablation_summarizer.py  test_round29_next_step_ablation_manifest.py  test_round29_next_step_ablation_summarizer.py  test_round29_stage2_ablation_manifest.py  test_round29_stage2_ablation_summarizer.py  test_round29_stage2_cond_injection.py  test_round29_stage2_oracle_conditions.py  test_round30_ild_diagnosis.py  (+12 more)
(+454 files in other folders)
