[project]
name = "piano"
version = "0.1.0"
description = "PIANO: Physically-Informed Adaptive iNteraction Orchestration — Object-adaptive human motion generation via structured interaction latents"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision",
    "accelerate",
    "transformers",
    "diffusers",
    "einops",
    "omegaconf",
    "trimesh",
    "rtree",           # required by trimesh.proximity.closest_point (spatial index)
    "smplx",
    "scipy",
    "scikit-learn",
    "hmmlearn",
    "joblib",
    "tqdm",
    "numpy",
]

[project.optional-dependencies]
wandb = ["wandb"]
viz = ["matplotlib", "open3d"]
dev = ["pytest"]

[project.scripts]
# --- Training ---
# Stage-2 AnchorDiff trainer (the only active training entry point).
piano-train-anchordiff = "piano.training.train_anchordiff:main"

# --- Visualisation ---
piano-visualize-motion = "piano.inference.visualize_motion:main"

# --- Data preprocessing + pseudo-label extraction (still used by
#     scripts/stage1_pseudo_labels/* and scripts/prep/*) ---
piano-preprocess-omomo = "piano.data.preprocess_omomo:main"
piano-pseudo-labels = "piano.data.pseudo_labels.run_all:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
